fix unappropriated stretching of footer images

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ nav{
 
  .slider{
      background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
-     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%); 
+     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
      overflow: hidden;
     }
     .slider{
@@ -202,7 +202,7 @@ nav{
     .product{
         height: 100vh;
         background-color: whitesmoke;
-        position: relative;    
+        position: relative;
   clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
 
     }
@@ -300,7 +300,7 @@ label{
 .payTitle{
     margin-bottom: 11px;
     font-size: 20px;
-    color: rgb(10, 86, 149);  
+    color: rgb(10, 86, 149);
 }
 .cardIcons{
     display: flex;
@@ -340,7 +340,7 @@ box-shadow: 10px 2px 37px -10px rgba(0,0,0,0.99);
     justify-content: center;
     cursor: pointer;
     padding: 2px;
-    
+
 }
 .sm{
     width: 30%;
@@ -359,21 +359,26 @@ box-shadow: 10px 2px 37px -10px rgba(0,0,0,0.99);
 }
 .newSeason{
     display: flex;
+    height: 500px;
 }
 .nsItem{
     flex: 1;
     background-color: black;
     color: white;
-display: flex;
-align-items: center;
-text-align: center;
-justify-content: center;
-flex-direction: column;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+.nsItem:nth-child(1) {
+    justify-content: flex-end;
 }
 .nsImg{
     width: 100%;
-    height: 500px;
-
+    height: auto;
+    justify-self: flex-end;
 }
 .nsTitle{
     font-size: 40px;
@@ -474,7 +479,7 @@ footer{
         background-color: lightgrey;
     }
     .buyButton{
-       
+
         right: 0;
         top: 0;
     }
@@ -520,26 +525,26 @@ footer{
         flex-direction: column;
         align-items: center;
       }
-    
+
       .footerLeft{
         padding: 20px;
         width: 90%;
       }
-    
+
       .footerRight{
         padding: 20px;
         width: 90%;
         align-items: center;
         background-color: whitesmoke;
       }
-    
+
       .payment{
         width: 90%;
         padding: 20px;
       }
-    }    
+    }
 
-    
+
 
 
 
